Fixed live search result z-index issue.

--- a/public/sass/bu.sched.sass
+++ b/public/sass/bu.sched.sass
@@ -724,7 +724,7 @@ $modal-width: 480px
 				left: 0
 				padding: 0
 				margin: 0
-				z-index: 10
+				z-index: 1000
 				@include opacity(0)
 				display: none
 				overflow: visible
